--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,10 @@ android {
 }
 
 dependencies {
-
+    def nav_version = "2.5.3"
+    implementation "androidx.navigation:navigation-compose:$nav_version"
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.5.1'
@@ -56,6 +59,7 @@ dependencies {
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
+    implementation "androidx.metrics:metrics-performance:1.0.0-alpha03"
     testImplementation 'junit:junit:4.13.2'
     implementation "androidx.compose.material3:material3-window-size-class:1.0.0-rc01"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
